// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correcly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $9.50
  </h1>
</div>
`;

exports[`should correcly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $11.00
  </h1>
</div>
`;
